test/link/script-ds-overflow.out
error: Cannot increase the current address by 1 bytes: only 0 bytes to $4000
    at script-ds-overflow.link(3)
error: Cannot increase the current address by 65535 bytes: only 0 bytes to $ffff
    at script-ds-overflow.link(7)
Linking failed with 2 errors
